# kno1

./: README.md  lab3.py  lab5.py  lab6.py  pyproject.toml  report3.md  run_lab3.ps1  script2.py  script3.py  script4.py
saved/: scaler.pk1
saved/lab3/: base_first_model.keras  base_second_model.keras  best_hparams.json  hyper_model.keras
saved/lab5/: dense.keras
saved/lab6/: model_encoder.keras
