[project]
name = "studia"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "graphviz>=0.21",
    "keras>=3.12.0",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydot>=4.0.1",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
